--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "dependencies": {
     "backend": "file:",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
-    "mongoose-delete": "^1.0.2"
+    "mongoose-delete": "^1.0.2",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
