--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "mongoose-delete": "^1.0.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
