--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "Project Estimate with NodeJS",
   "dependencies": {
+    "axios": "^1.7.7",
     "backend": "file:",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
