--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose-delete": "^1.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
