--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.5.3",
@@ -30,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
+    "path": "^0.12.7",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
