--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,9 @@
 # Database configuration
-MONGO_URI=mongodb://
-MONGO_USER=
-MONGO_PASS=
-MONGO_HOST=
-MONGO_PORT=
+MONGO_URI=mongodb://root:123456@localhost:27018/
+MONGO_USER=root
+MONGO_PASS=123456
+MONGO_HOST=localhost
+MONGO_PORT=27018
 MONGO_DB=dev
 
 # JWT configuration
@@ -13,16 +13,17 @@ REFRESH_TOKEN_EXPIRES_IN=7d
 # Nodejs configuration
 NODE_ENV=development
 NODE_PORT=3000
-DEFAULT_PASSWORD=
+DEFAULT_PASSWORD=Password123
+SESSION_PROVIDER=pass
 # Client configuration
-CLIENT_URL=
+CLIENT_URL=http://localhost:8081
 # Seed data configuration
-SEED_DATA_RESET=false
+SEED_DATA_RESET=true
 #Cloudinary configuration
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
-CLOUDINARY_API_ENVIROMENT=
+CLOUDINARY_CLOUD_NAME=dsfw10h9y
+CLOUDINARY_API_KEY=412785268974686
+CLOUDINARY_API_SECRET=dLAc8sNvtUMNg3SQNrSU6ltp0zc
+CLOUDINARY_API_ENVIROMENT=cloudinary://412785268974686:dLAc8sNvtUMNg3SQNrSU6ltp0zc@dsfw10h9y
 
 # IMAGES
 MONGO_DB_IMAGE=bitnami/mongodb:5.0.14
@@ -38,7 +39,7 @@ MONGO_DB_PORT=27018
 # MONGO EXPRESS BROWSER
 # https://github.com/BlackthornYugen/mongo-express-docker
 WEB_MONGODB_ENABLE_ADMIN=true
-WEB_MONGODB_URL=mongodb://root:123456@mongo:27017/?authSource=admin
+WEB_MONGODB_URL=mongodb://root:123456@mongo:27018/?authSource=admin
 WEB_BASICAUTH_USERNAME=user
 WEB_BASICAUTH_PASSWORD=123456
 WEB_MONGODB_PORT=9000
