chores: update env

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Database configuration
-MONGO_URI=mongodb://root:123456@localhost:27018/
-MONGO_USER=root
-MONGO_PASS=123456
+MONGO_URI=mongodb+srv://fong:P6xoXyH5UM1i3l9U@cluster0.xtfmq.mongodb.net/ecomerce
+MONGO_USER=fong
+MONGO_PASS=P6xoXyH5UM1i3l9U
 MONGO_HOST=localhost
 MONGO_PORT=27018
 MONGO_DB=dev
@@ -28,21 +28,3 @@ CLOUDINARY_API_ENVIROMENT=cloudinary://412785268974686:dLAc8sNvtUMNg3SQNrSU6ltp0
 # IMAGES
 MONGO_DB_IMAGE=bitnami/mongodb:5.0.14
 MONGO_EXPRESS_IMAGE=ghcr.io/blackthornyugen/mongo-express-docker:v1.0.0
-
-# CONFIG MONGODB
-MONGO_DB_ROOT_USERNAME=root
-MONGO_DB_ROOT_PASSWORD=123456    
-MONGO_DB_USERNAME=user
-MONGO_DB_PASSWORD=123456
-MONGO_DB_PORT=27018
-
-# MONGO EXPRESS BROWSER
-# https://github.com/BlackthornYugen/mongo-express-docker
-WEB_MONGODB_ENABLE_ADMIN=true
-WEB_MONGODB_URL=mongodb://root:123456@mongo:27018/?authSource=admin
-WEB_BASICAUTH_USERNAME=user
-WEB_BASICAUTH_PASSWORD=123456
-WEB_MONGODB_PORT=9000
-
-# Run docker compose
-# docker compose -p nodejs-mongodb up -d
