--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^7.2.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "mongoose": "^8.5.3",
     "mongoose-delete": "^1.0.2",
@@ -38,5 +39,16 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "_moduleAliases": {
+    "@config": "src/config",
+    "@controllers": "src/controllers",
+    "@middlewares": "src/middlewares",
+    "@models": "src/models",
+    "@routes": "src/routes",
+    "@seeder": "src/seeder",
+    "@services": "src/services",
+    "@uploads": "src/uploads",
+    "@utils": "src/utils"
   }
 }
